--- a/src/assets/input.css
+++ b/src/assets/input.css
@@ -23,9 +23,7 @@
 .h-90 {
   height: 90%;
 }
-.h-55 {
-  height: 52.5%;
-}
+
 
 .h-01 {
   height: 10%;
@@ -60,6 +58,6 @@
 }
 
 .dashboard_h{
-  height: calc(100% - 2rem);
+  height: calc(100vh - 7.8rem);
 }
 
